# SupplierRank---AI-Supplier-Evaluations

./: Procurement KPI Analysis Dataset 1.xlsx  README.md  app.py  pyproject.toml  requirements.txt  scaler.pkl  supplier_model.pkl  supplier_ranking.csv  supplier_training.ipynb
